--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node hello-app/index.js",
+    "dev": "node --watch hello-app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
